--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Rakna</string>
+    <string name="signUp_btn">Sign Up</string>
+    <string name="register_txt">Sign up</string>
+    <string name="LoginName">Name</string>
+    <string name="LetParkText">"Let's Park Your Car Now "</string>
+    <string name="WelcomeForNew">Welcome For New     Driver</string>
+    <string name="RegisterName">Name</string>
+    <string name="RegisterEmail">Email</string>
+    <string name="RegisterPassword">Password</string>
+    <string name="RegisterPhone">Phone</string>
+    <string name="IntentText">Log in</string>
+    <string name="AlreadyParking">Already Parking with us</string>
+    <string name="LoginPassword">Password</string>
+    <string name="NewDriver">New Driver ?!</string>
+    <string name="RegIntentText">Sign Up</string>
 </resources>
