--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,14 @@
     <string name="LoginPassword">Password</string>
     <string name="NewDriver">New Driver ?!</string>
     <string name="RegIntentText">Sign Up</string>
-    <string name="address">Address: </string>
-    <string name="full">Full</string>
+    <string name="signUp">Sign Up</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="logIn">Log In</string>
+    <string name="haveAnAccount">Have An Account?</string>
+    <string name="phone">Phone</string>
+    <string name="name">Name</string>
     <string name="language">Language</string>
-    <string name="logout">Logout</string>
+    <string name="logout">Log Out</string>
+    <string name="full">Full</string>
 </resources>
