Test Branch Locale Commit

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -18,4 +18,6 @@
     <string name="thisAppNeedsLocationPermission">هذا التطبيق يحتاج للسماح باذونات تحديد الموقع لكي يعمل</string>
     <string name="accept">سماح</string>
     <string name="decline">رفض</string>
+    <string name="english">الانجليزية</string>
+    <string name="arabic">العربية</string>
 </resources>
