--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -21,4 +21,9 @@
     <string name="english">الانجليزية</string>
     <string name="arabic">العربية</string>
     <string name="update">تحديث</string>
+    <string name="navigate">اظهار الاتجاهات</string>
+    <string name="spectate">مشاهدة</string>
+    <string name="parkingPlace">موقع للركن</string>
+    <string name="retry">اعادة المحاولة</string>
+    <string name="noInternetConnection">لا يوجد اتصال بالانترنت</string>
 </resources>
