--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="enterYPhone">Enter Your Phone</string>
     <string name="enterYpassord">Enter Your Password</string>
     <string name="emailIsRequier">Email is Required</string>
-    <string name="passordShort">Password is too Short</string>
+    <string name="passordShort">Password Must Contain At Least One Upper Case Letter, Contains numbers and Be At Least 8 Characters</string>
     <string name="enterVemail">Please Enter Valid Email</string>
     <string name="registerSuccess">Registered Successfully</string>
     <string name="error">Error !</string>
