--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -45,4 +45,5 @@
     <string name="authenticathinFaild">فشل في التوثيق</string>
     <string name="signingUp">جاري التسجيل</string>
     <string name="signingIn">جاري تسجيل الدخول</string>
+    <string name="uploadingImage">جاري رفع الصورة</string>
 </resources>
