--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="uploadingImage">Uploading Image</string>
     <string name="enterVpass">Enter Valid Password</string>
     <string name="failed">Failed</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="addedToFavorites">Added To Favorites</string>
+    <string name="removedFromFavorites">Removed From Favorites</string>
 </resources>
