--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -64,4 +64,5 @@
     <string name="youhavenotBook">لم تحجز بعد</string>
     <string name="book">احجز</string>
     <string name="cancelBooking">الغاء الحجز</string>
+    <string name="cancelRouting">اخفاء الاتجاهات</string>
 </resources>
