--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -65,4 +65,5 @@
     <string name="book">احجز</string>
     <string name="cancelBooking">الغاء الحجز</string>
     <string name="cancelRouting">اخفاء الاتجاهات</string>
+    <string name="enable_traffic_mode">تشغيل وضع المرور</string>
 </resources>
